// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlsAction renders multiple, with and without description 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <IconText
          icon={<ForwardRef(DownloadOutlined) />}
          text="download"
        />
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="https://www.whatever.com/pdfs/fulltext.pdf"
    >
      <EventTracker
        eventId="PdfDownload"
        eventPropName="onClick"
        extractEventArgsToForward={null}
      >
        <LinkWithTargetBlank
          as="a"
          href="https://www.whatever.com/pdfs/fulltext.pdf"
        >
          Whatever
        </LinkWithTargetBlank>
      </EventTracker>
    </MenuItem>
    <MenuItem
      key="www.descriptionless.com/fulltext.pdf"
    >
      <EventTracker
        eventId="PdfDownload"
        eventPropName="onClick"
        extractEventArgsToForward={null}
      >
        <LinkWithTargetBlank
          as="a"
          href="www.descriptionless.com/fulltext.pdf"
        >
          descriptionless.com/fulltext.pdf
        </LinkWithTargetBlank>
      </EventTracker>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`UrlsAction renders single 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="PdfDownload"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="https://www.whatever.com/pdfs/fulltext.pdf"
    >
      <IconText
        icon={<ForwardRef(DownloadOutlined) />}
        text="pdf"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;
